# Tongue-Doctor

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
cases/: case_18yo_female.txt
config/: default.yaml  dev.yaml  models.yaml  prod.yaml
docs/: ARCHITECTURE.md  EVAL_PROCESS.md  KICKOFF_PLAN.md  PROMPT_PROCESS.md  RESOURCE_ACQUISITION.md  SAFETY_INVARIANTS.md  STERN_REASONING_BACKBONE.md
docs/adrs/: 0001-record-architecture-decisions.md  0002-package-name-tongue-doctor.md  0003-research-demo-tos-posture.md  0004-region-and-fallback.md  0005-no-orchestration-framework.md
eval/: __init__.py  regression.py  runner.py
eval/scoring/: __init__.py  aggregate.py  base.py  citation.py  differential.py  disclaimer.py  multimodal.py  must_not_miss.py  prescription.py  problem_representation.py  red_flags.py  scope.py  workup.py
prompts/_fixtures/: echo_v1.j2
prompts/convergence_checker/: system_v1.j2
prompts/critic/: system_v1.j2
prompts/defender/: system_v1.j2
prompts/judge/: system_v1.j2
prompts/must_not_miss_sweeper/: system_v1.j2
prompts/reasoner/: system_v1.j2
prompts/router/: system_v1.j2
prompts/safety_reviewer/: system_v1.j2
prompts/synthesizer/: system_v1.j2
scripts/: __init__.py  build_bm25_index.py  chat.py  extract_stern.py  extract_stern_to_templates.py  ingest_dailymed.py  ingest_icd10cm.py  ingest_openstax.py  ingest_pmc_oa.py  ingest_statpearls.py  ingest_stern.py  ingest_uspstf.py  replay.py  run_case.py  seed_eval.py  serve.py
src/tongue_doctor/: __init__.py  app.py  logging.py  settings.py  tracing.py
src/tongue_doctor/agents/: __init__.py  _runtime.py  base.py  convergence_checker.py  critic.py  defender.py  judge.py  must_not_miss_sweeper.py  reasoner.py  router.py  safety_reviewer.py  schemas.py  synthesizer.py
src/tongue_doctor/api/: __init__.py  app.py  dependencies.py  routes.py  schemas.py
src/tongue_doctor/knowledge/: __init__.py  chunkers.py  schema.py
src/tongue_doctor/knowledge/ingest/: __init__.py  _http.py  base.py  storage.py
src/tongue_doctor/knowledge/ingest/sources/: __init__.py  dailymed.py  icd10cm.py  openstax.py  pmc_oa.py  statpearls.py  stern.py  uspstf.py
src/tongue_doctor/models/: __init__.py  anthropic_direct.py  base.py  gemini_direct.py  vertex_anthropic.py  vertex_gemini.py
src/tongue_doctor/multimodal/: __init__.py
src/tongue_doctor/multimodal/handlers/: __init__.py
src/tongue_doctor/ontology/: __init__.py
src/tongue_doctor/orchestrator/: __init__.py  case_manager.py  loop.py  types.py
src/tongue_doctor/prompts/: __init__.py  loader.py
src/tongue_doctor/retrieval/: __init__.py  bm25.py  index.py
src/tongue_doctor/safety/: __init__.py  disclaimers.py  prescription_leak_detector.py  scope.py
src/tongue_doctor/schemas/: __init__.py  attachment.py  case_state.py  differential.py  output.py  retrieval.py
src/tongue_doctor/templates/: __init__.py  loader.py  schema.py
src/tongue_doctor/templates/data/: abdominal_pain.yaml  acid_base_abnormalities.yaml  aids_hiv_infection.yaml  anemia.yaml  back_pain.yaml  bleeding_disorders.yaml  chest_pain.yaml  cough_fever_and_respiratory_infections.yaml  delirium_and_dementia.yaml  diabetes.yaml  diarrhea_acute.yaml  dizziness.yaml  dyspnea.yaml  dysuria.yaml  edema.yaml  fatigue.yaml  gi_bleeding.yaml  headache.yaml  hematuria.yaml  hypercalcemia.yaml  hypertension.yaml  hyponatremia_and_hypernatremia.yaml  hypotension.yaml  jaundice_and_abnormal_liver_enzymes.yaml  joint_pain.yaml  kidney_injury_acute.yaml  rash.yaml  sore_throat.yaml  syncope.yaml  unintentional_weight_loss.yaml  wheezing_and_stridor.yaml
tests/: conftest.py
tests/integration/: test_api.py  test_loop_smoke.py  test_loop_stream.py
tests/unit/: test_agent_prompts.py  test_agents.py  test_bm25.py  test_chunkers.py  test_gemini_direct.py  test_prescription_leak_detector.py  test_prompt_loader.py  test_reasoner_prompt.py  test_schemas.py  test_settings.py  test_stern_ingester.py  test_template_schema_stern.py
